syntax = "proto3";

package grpc;

option go_package = "github.com/DavidLakeT/djcardonan-st0263/RPC";

message ListFilesRequest {
  optional int32 limit = 1;
}

message ListFilesResponse {
  string file_list = 1;
}

message SearchFilesRequest {
  string pattern = 1;
}

message SearchFilesResponse {
  bool exists = 1;
}

service FilesInformation {
  rpc ListFiles (ListFilesRequest) returns (ListFilesResponse) {}
  rpc SearchFiles (SearchFilesRequest) returns (SearchFilesResponse) {}
}